[WIP] Fixed food labels alignment when block alignment is on the right

--- a/src/wpzoom-blocks/recipe-card/style.scss
+++ b/src/wpzoom-blocks/recipe-card/style.scss
@@ -547,6 +547,13 @@
             }
         }
     }
+    &.block-alignment-right {
+        .recipe-card-food-labels {
+            .food-labels-list {
+                justify-content: flex-end;
+            }
+        }
+    }
     .recipe-card-notes + .recipe-card-food-labels {
         margin-top: -10px;
     }
